--- a/dashboard.html
+++ b/dashboard.html
@@ -245,8 +245,8 @@ iframe{
 
 <script>
 const sb = supabase.createClient(
-  "SUA_URL_SUPABASE",
-  "SUA_PUBLIC_KEY"
+  "https://dxkszikemntfusfyrzos.supabase.co",
+  "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
 
 async function check(){
