--- a/home.html
+++ b/home.html
@@ -105,6 +105,21 @@ html,body{
       <iframe src="cards/card3.html"></iframe>
     </div>
 
+        <div class="card c1">
+      <div class="card-title">📋 Ficha Técnica</div>
+      <iframe src="cards/card1.html"></iframe>
+    </div>
+
+    <div class="card c2">
+      <div class="card-title">📊 Indicadores</div>
+      <iframe src="cards/card2.html"></iframe>
+    </div>
+
+    <div class="card c3">
+      <div class="card-title">📈 Análises</div>
+      <iframe src="cards/card3.html"></iframe>
+    </div>
+
   </div>
 
 </div>
