--- a/dashboard.html
+++ b/dashboard.html
@@ -235,7 +235,7 @@ iframe{
 
   <div class="main">
     <div class="header">
-      Dashboard
+      CB SYSTEMS® - FICHA TÉCNICA
       <button class="logout" onclick="logout()">Sair</button>
     </div>
     <iframe id="frame" src=""></iframe>
