--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -275,7 +275,7 @@ button{
 <div id="app" class="hidden">
 
 <div class="topbar">
-  <h1>📋 Ficha Técnica</h1>
+  <h1>CADASTRO DE FICHAS VIA API - VAREJO FÁCIL</h1>
 </div>
 
 <label>Produto (prato)</label>
