--- a/analiseficha.html
+++ b/analiseficha.html
@@ -53,10 +53,10 @@ html,body{
   cursor:pointer;
 }
 
-/* GRID PRINCIPAL */
+/* GRID PRINCIPAL – DESKTOP */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(320px,1fr));
+  grid-template-columns:repeat(4,1fr); /* desktop grande */
   gap:22px;
   padding:0 24px 24px;
 }
@@ -190,6 +190,22 @@ input,select{
   padding:12px;
   text-align:center;
   font-weight:800;
+}
+@media (max-width: 640px){
+  .grid{
+    grid-template-columns:repeat(2,1fr);
+    padding:0 14px 14px;
+    gap:14px;
+  }
+
+  .card img{
+    height:140px;
+  }
+}
+@media (min-width: 641px) and (max-width: 1024px){
+  .grid{
+    grid-template-columns:repeat(3,1fr);
+  }
 }
 
 </style>
