--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -245,7 +245,30 @@ button{
 @keyframes spin{
   to{transform:rotate(360deg)}
 }
+/* BOTÃO + INGREDIENTE */
+.grid button{
+  width:48px;
+  height:48px;
+  padding:0;
+  font-size:22px;
+  font-weight:900;
+  border-radius:14px;
+  background:var(--primary);
+  color:#fff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
 
+
+
+
+
+
+
+
+
+  
 </style>
 </head>
 
