--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -260,6 +260,35 @@ button{
   justify-content:center;
 }
 
+/* CARD DE SALVAR – CTA PRINCIPAL */
+.save-card{
+  margin-top:32px;
+  padding:24px;
+  border-radius:22px;
+  background:linear-gradient(
+    180deg,
+    var(--primary),
+    #1e40af
+  );
+  box-shadow:0 18px 40px rgba(37,99,235,.35);
+}
+
+/* BOTÃO DENTRO DO CARD */
+.save-card button{
+  background:#fff;
+  color:#1e40af;
+  font-size:16px;
+  font-weight:900;
+  border-radius:18px;
+  padding:16px;
+  border:none;
+}
+
+/* HOVER PREMIUM */
+.save-card button:hover{
+  filter:brightness(0.95);
+  transform:translateY(-1px);
+}
 
 
 
@@ -367,9 +396,10 @@ button{
   <div class="kpi">Margem<span id="margem">—</span></div>
 </div>
 
-<button onclick="salvar()" style="margin-top:28px">
-  Salvar Ficha Técnica
-</button>
+<div class="save-card">
+  <button onclick="salvar()">Salvar Ficha Técnica</button>
+</div>
+
 
 </div>
 </div>
