--- a/analiseficha.html
+++ b/analiseficha.html
@@ -239,7 +239,7 @@ input,select{
 <body>
 
 <div class="topbar">
-  <h1>📊 Fichas Técnicas</h1>
+  <h1>FICHAS CADASTRADAS</h1>
 </div>
 <!-- FILTROS -->
 <div class="filters">
