--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -349,6 +349,7 @@ button[onclick="salvar()"]:hover{
   <option value="Entrada">Entrada</option>
   <option value="Sobremesa">Sobremesa</option>
   <option value="Drink">Drink</option>
+    <option value="Sushi">Sushi</option>
   <option value="Acompanhamento">Acompanhamento</option>
 </select>
 
